--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <!--Metadatos-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Dann LeBeau">
-    <meta name="description" content="Banco Solar">
-    <meta name="keywords" content="banco, transferencias, usuarios, tecnología, co-work">
-    <title>Solar Bank</title>
+    <meta name="description" content="Prototipo de banco solar">
+    <meta name="keywords" content="banco, finanzas, tecnologia, economia, dinero">
+    <title>Banco Solar</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -28,9 +28,9 @@
             <hr class="bg-white w-50" />
             <div class="d-flex align-items-center justify-content-center">
               Nombre:
-              <input class="form-control d-inline mx-3" name="nombre" required /><!-- se agrega name = nombre-->
+              <input class="form-control d-inline mx-3" required />
               Balance:
-              <input class="form-control d-inline mx-3" name="balance" required /><!-- se agrega name = balance-->
+              <input class="form-control d-inline mx-3" required />
               <button type="submit" class="btn btn-danger">Agregar</button>
             </div>
           </div>
@@ -72,7 +72,7 @@
                 />
               </div>
 
-              <button type="submit" class="btn btn-danger">Relalizar</button>
+              <button type="submit" class="btn btn-danger">Realizar</button>
             </div>
           </div>
         </form>
@@ -223,6 +223,9 @@
     try {
       const response = await fetch("http://localhost:3000/usuario", {
         method: "post",
+        headers: {
+          'Content-Type': 'application/json'
+        },
         body: JSON.stringify({
           nombre,
           balance,
@@ -248,6 +251,9 @@
     try {
       const response = await fetch("http://localhost:3000/transferencia", {
         method: "post",
+        headers: {
+          'Content-Type': 'application/json'
+        },
         body: JSON.stringify({
           emisor,
           receptor,
@@ -283,7 +289,7 @@
                   ><button class="btn btn-danger" onclick="eliminarUsuario('${c.id}')">Eliminar</button>
                 </td>
               </tr>
-        `);
+         `);
 
       $("#emisor").append(`<option value="${c.nombre}">${c.nombre}</option>`);
       $("#receptor").append(`<option value="${c.nombre}">${c.nombre}</option>`);
@@ -295,6 +301,7 @@
       method: "DELETE",
     });
     getUsuarios();
+    getTransferencias(); //se agrega
   };
 
   const getTransferencias = async () => {
@@ -303,13 +310,13 @@
 
     data.forEach((t) => {
       $(".transferencias").append(`
-      <tr>
-        <td> ${formatDate(t[4])} </td>
-        <td> ${t[1]} </td>
-        <td> ${t[2]} </td>
-        <td> ${t[3]} </td>
-      </tr>
-    `);
+       <tr>
+         <td> ${formatDate(t[4])} </td>
+         <td> ${t[1]} </td>
+         <td> ${t[2]} </td>
+         <td> ${t[3]} </td>
+       </tr>
+     `);
     });
   };
 
